test_suite/tests/ui/fail/invalid_arg_count_in_type/invalid_option_type_min.stderr
error: custom attribute panicked
 --> $DIR/invalid_option_type_min.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: argument `option` is no defined in `fn test`
